<resources>
    <string name="app_name">TabletopApplication</string>

    <string name="arrow_back_description">Arrow back</string>
    <string name="download">Download</string>
    <string name="image_material">Image Material</string>
    <string name="name">Name</string>
    <string name="description">Description</string>

    <string name="my_games_text">My games</string>
    <string name="dotted_line">DottedLine</string>
    <string name="example_title">Title</string>
    <string name="example_description">Description</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="remove">Remove</string>
    <string name="gameedit">GameEdit</string>
    <string name="add">Add</string>
    <string name="select_file">Select Photo</string>
    <string name="delete">Delete</string>
    <string name="title">Title</string>
    <string name="materials">Materials:</string>
    <string name="title_activity_dice_result">DiceResultActivity</string>
    <string name="title_activity_dice_settings">DiceSettingsActivity</string>
    <string name="title_activity_hourglass">HourglassActivity</string>
    <string name="your_note">Your Note</string>
    <string name="h1">H1</string>
    <string name="h2">H2</string>
    <string name="h3">H3</string>
    <string name="dice_roll">Брось свои кубаны на встречу приключениям</string>
    <string name="h_card">Эти песочные часы никогда не разобьются!</string>
    <string name="title_note">note</string>
    <string name="install">Install</string>
    <string name="title_timer">Timer</string>
    <string name="title_dice">dice</string>
    <string name="title_hourglass">hourglass</string>
    <string name="timer_text">Поставь таймер для передышки</string>
    <string name="game_view_content_description" translatable="false">Game view</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>