<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/top_panel_height"
            android:background="@color/primary_color_app"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/activity_edit_game__back_button"
                android:layout_width="@dimen/icon_top_panel_width"
                android:layout_height="match_parent"
                android:src="@drawable/baseline_arrow_back_24"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="@dimen/icon_top_panel_margin"
                android:contentDescription="@string/arrow_back_description" />

            <ImageView
                android:id="@+id/activity_edit_game__save_button"
                android:layout_width="@dimen/icon_top_panel_width"
                android:layout_height="match_parent"
                android:src="@drawable/baseline_save_24"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="@dimen/icon_top_panel_margin"
                android:contentDescription="@string/edit" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:orientation="horizontal"
            android:layout_margin="10dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.3">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="@dimen/image_corner_radius_card_material">

                    <ImageView
                        android:id="@+id/activity_edit_game__image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@color/black"
                        android:contentDescription="@string/image_material" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/activity_edit_game__edit_button"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="-1dp"
                    app:cardBackgroundColor="@color/second_color_app"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:cardCornerRadius="50dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/baseline_edit_24"
                        android:layout_margin="5dp"
                        android:contentDescription="@string/gameedit" />

                </androidx.cardview.widget.CardView>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/activity_edit_game__title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:text="@string/example_title"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    tools:ignore="NestedWeights"
                    android:layout_margin="5dp" />

                <TextView
                    android:id="@+id/activity_edit_game__description"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/example_description"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:layout_margin="5dp" />

            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:src="@drawable/dotted_line"
            android:layerType="software"
            android:contentDescription="@string/dotted_line" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/MaterialCardViewStyle"
            app:cardBackgroundColor="@color/second_color_app"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/materials"
                android:textSize="20sp"
                android:textColor="@color/third_color_app"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="5dp" />

        </com.google.android.material.card.MaterialCardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/activity_edit_game__rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:listitem="@layout/card_material"
            android:paddingBottom="20dp"/>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="75dp"
        android:layout_height="75dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cardCornerRadius="50dp"
        android:layout_margin="15dp"
        app:cardBackgroundColor="@color/primary_color_app">

        <ImageView
            android:id="@+id/activity_edit_game__add_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/baseline_add_24"
            android:background="@color/primary_color_app"
            android:scaleX="0.75"
            android:scaleY="0.75"
            android:contentDescription="@string/add" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>