<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_color"
        android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/top_panel_choose_material"
            android:layout_width="match_parent"
            android:layout_height="@dimen/top_panel_height"
            android:background="@color/primary_color_app"
            app:layout_constraintTop_toTopOf="parent">

        <ImageView
                android:layout_width="@dimen/icon_top_panel_width"
                android:layout_height="match_parent"
                android:src="@drawable/baseline_arrow_back_24"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="@dimen/icon_top_panel_margin"
                android:contentDescription="@string/arrow_back_description" />

        <ImageView
                android:layout_width="@dimen/icon_top_panel_width"
                android:layout_height="match_parent"
                android:src="@drawable/baseline_edit_24"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="@dimen/icon_top_panel_margin"
                android:contentDescription="@string/download" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="horizontal"
            android:layout_margin="10dp">

        <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:cardCornerRadius="@dimen/image_corner_radius_card_material"
                android:layout_margin="5dp">

            <ImageView
                    android:id="@+id/activity_preview_game_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@color/black"
                    android:contentDescription="@string/image_material" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">

            <TextView
                    android:id="@+id/activity_preview_game_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:text="@string/example_title"
                    android:textSize="25sp"
                    android:textColor="@color/white"
                    android:layout_margin="5dp"
                    tools:ignore="NestedWeights" />

            <TextView
                    android:id="@+id/activity_preview_game_description"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/example_description"
                    android:textSize="15sp"
                    android:textColor="@color/white"
                    android:layout_margin="5dp" />

        </LinearLayout>

    </LinearLayout>

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:src="@drawable/dotted_line"
            android:layerType="software"
            android:contentDescription="@string/dotted_line" />

    <com.google.android.material.card.MaterialCardView
            android:layout_width="200dp"
            android:layout_height="60dp"
            style="@style/MaterialCardViewStyle"
            app:cardBackgroundColor="@color/second_color_app"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="Materials:"
                android:textSize="30sp"
                android:textColor="@color/third_color_app" />

    </com.google.android.material.card.MaterialCardView>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/activity_preview_game_rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:listitem="@layout/card_material" />

</LinearLayout>