<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
            android:id="@+id/cv_card_material"
            android:layout_width="@dimen/image_size_card_material"
            android:layout_height="@dimen/image_size_card_material"
            app:cardCornerRadius="@dimen/image_corner_radius_card_material"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/image_margin_start_card_material"
            >
        <ImageView
                android:id="@+id/iv_card_material"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@color/black"
                android:contentDescription="@string/image_material"
                />
    </androidx.cardview.widget.CardView>
    <TextView
            android:id="@+id/tv_name_text_card_material"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/cv_card_material"
            android:layout_marginStart="@dimen/text_margin_start"
            android:layout_marginEnd="@dimen/text_margin_end"/>
    <TextView
            android:id="@+id/tv_description_text_card_material"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="16sp"
            android:textColor="@color/grey"
            app:layout_constraintTop_toBottomOf="@id/tv_name_text_card_material"
            app:layout_constraintStart_toEndOf="@id/cv_card_material"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="@dimen/text_margin_start" />

</androidx.constraintlayout.widget.ConstraintLayout>