<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_panel_height"
        android:background="@color/primary_color_app"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/activity_edit_properties_game__back_button"
            android:layout_width="@dimen/icon_top_panel_width"
            android:layout_height="match_parent"
            android:src="@drawable/baseline_arrow_back_24"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/icon_top_panel_margin"
            android:contentDescription="@string/arrow_back_description" />

        <ImageView
            android:id="@+id/activity_edit_properties_game__save_button"
            android:layout_width="@dimen/icon_top_panel_width"
            android:layout_height="match_parent"
            android:src="@drawable/baseline_save_24"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/icon_top_panel_margin"
            android:contentDescription="@string/edit" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                app:cardCornerRadius="@dimen/image_corner_radius_card_material">

                <ImageView
                    android:id="@+id/activity_edit_properties_game__image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@color/black"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/image_material" />

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:layout_weight="1">

            <androidx.cardview.widget.CardView
                android:id="@+id/activity_edit_properties_game__select_file"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:cardBackgroundColor="@color/second_color_app"
                app:cardCornerRadius="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:gravity="center"
                    android:text="@string/select_file"
                    android:textSize="24sp"
                    android:textColor="@color/third_color_app"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/activity_edit_properties_game__delete"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:cardBackgroundColor="@color/third_color_app"
                app:cardCornerRadius="15dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:src="@drawable/dotted_line"
        android:layerType="software"
        android:contentDescription="@string/dotted_line" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/MaterialCardViewStyle"
        app:cardBackgroundColor="@color/second_color_app"
        android:layout_gravity="start"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/title"
            android:textSize="30sp"
            android:textColor="@color/third_color_app"
            android:layout_marginStart="30dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="0dp"/>

    </com.google.android.material.card.MaterialCardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <EditText
            android:id="@+id/activity_edit_properties_game__name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="11dp"
            android:hint="@string/title"
            android:maxLines="1"
            android:textSize="20sp"
            android:background="@null"
            android:inputType="text"/>

    </androidx.cardview.widget.CardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/MaterialCardViewStyle"
        app:cardBackgroundColor="@color/second_color_app"
        android:layout_gravity="start"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/description"
            android:textSize="30sp"
            android:textColor="@color/third_color_app"
            android:layout_marginStart="30dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="0dp"/>

    </com.google.android.material.card.MaterialCardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <EditText
            android:id="@+id/activity_edit_properties_game__description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:gravity="top|start"
            android:hint="@string/description"
            android:textSize="20sp"
            android:background="@null"
            android:lines="4"
            android:inputType="textMultiLine" />

    </androidx.cardview.widget.CardView>

</LinearLayout>